chore(style): fix spacing

--- a/angular/projects/mffr/src/app/app.component.scss
+++ b/angular/projects/mffr/src/app/app.component.scss
@@ -75,7 +75,7 @@
   			max-width: 1100px;
   			margin: 20px auto;
   			text-align: center;
-  			padding: 15px;
+  			padding: 0 15px;
   		}
 	}
 
